# pynitrokey-nrf52-uploader

./: .gitlab-ci.yml  Makefile  README.md  pyproject.toml
pynitrokey_nrf52_uploader/: __init__.py
